istio-egress-demo/sidecar-restrict-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar-restrict-egress
  namespace: istio-system # Needs to be deployed in rootNamespace as defined in MeshConfig
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
    - "istio-egress/*"
    - "*/edition.cnn.com"
